[package]
name = "wa"
version = "0.1.1"
authors = ["Raphael Amorim <rapha850@gmail.com>"]
description = "WebAssembly and Rust utility library"
license = "MPL-2.0"
edition = "2021"
keywords = ["vector", "utility", "array", "string", "str"]
categories = ["data-structures", "text-processing"]
documentation = "https://docs.rs/wa"

rust-version = "1.64.0"
include = ["src", "examples", "README.md"]

[features]
# desktop = ["dep:gl", "dep:glutin", "dep:libc"]
array = []
vector = []
string = []

[profile.release]
# Tell `rustc` to optimize for small code size.
# opt-level = "s"

[[example]]
# cargo run --example strings --features="string"
name = "strings"
path = "examples/strings.rs"
required-features = ["string"]